<resources>
    <string name="app_name">Game Backlog Kotlin</string>
    <string name="action_delete">Delete Game backlog</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_hint">Title</string>
    <string name="platform_hint">Platform</string>
    <string name="day_hint">Day</string>
    <string name="month_hint">Month</string>
    <string name="year_hint">Year</string>
    <string name="release_date">Release: %1$s %2$s %3$s</string>
</resources>
